# libparanumal

./: .gitignore  CMakeLists.txt  configure-cmake.sh  make.top  makefile
backup/: insDiffusionHex3D.okl  insDiffusionQuad3D.okl  insDiffusionTet3D.okl  insDiffusionTri2D.okl  insIsoSurface3D.okl  insPoissonPenalty2D.okl  insPoissonPenalty3D.okl
include/: platform.hpp  timeStepper.hpp  types.h
include/ogs/: ogsDefs.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  platformDeviceConfig.cpp  platformProperties.cpp  platformSettings.cpp
libs/linAlg/: CMakeLists.txt  linAlgSetup.cpp
libs/linAlg/okl/: linAlgInnerProd.okl  linAlgNorm2.okl  linAlgSum.okl  linAlgWeightedInnerProd.okl  linAlgWeightedNorm2.okl
libs/linearSolver/: CMakeLists.txt
libs/linearSolver/okl/: igBasisInnerProducts.okl  igDropQRFirstColumn.okl  igReconstruct.okl  linearSolverUpdateNBFPCG.okl  linearSolverUpdateNBPCG.okl  linearSolverUpdatePCG.okl
libs/mesh/: CMakeLists.txt  meshSettings.cpp
libs/mesh/okl/: MassMatrixOperatorTet3D.okl  MassMatrixOperatorTri2D.okl
libs/ogs/: CMakeLists.txt
libs/parAlmond/: CMakeLists.txt
libs/parAlmond/okl/: kcycleCombinedOp.okl  vectorAddInnerProd.okl
libs/timeStepper/: CMakeLists.txt  timeStepperAB3.cpp  timeStepperEXTBDF3.cpp  timeStepperMRAB3.cpp  timeStepperSAAB3.cpp  timeStepperSARK4.cpp  timeStepperSARK5.cpp  timeStepperSSBDF3.cpp
libs/timeStepper/okl/: timeStepperDOPRI5.okl  timeStepperMRAB.okl  timeStepperMRSAAB.okl  timeStepperSARK.okl
solvers/: CMakeLists.txt
solvers/acoustics/okl/: acousticsSurfaceHex3D.okl  acousticsSurfaceQuad2D.okl  acousticsSurfaceTet3D.okl  acousticsSurfaceTri2D.okl  acousticsVolumeHex3D.okl  acousticsVolumeQuad2D.okl  acousticsVolumeTet3D.okl  acousticsVolumeTri2D.okl
solvers/advection/: CMakeLists.txt  advection.hpp  plot_wave.py
solvers/advection/data/: advectionBurger2D.h
solvers/advection/okl/: advectionFluxLimitersQuad2D.okl  advectionMaxWaveSpeedQuad2D.okl  advectionSurfaceHex3D.okl  advectionSurfaceQuad2D.okl  advectionSurfaceTet3D.okl  advectionSurfaceTri2D.okl  advectionVolumeHex3D.okl  advectionVolumeQuad2D.okl  advectionVolumeTet3D.okl  advectionVolumeTri2D.okl
solvers/advection/setups/: setupBurgersQuad2D.rc
solvers/advection/src/: advectionSetup.cpp  advectionStep.cpp  advectionWriteField.cpp
solvers/bns/okl/: bnsIsoSurface3D.okl  bnsRelaxationHex3D.okl  bnsRelaxationQuad2D.okl  bnsRelaxationQuad3D.okl  bnsRelaxationTet3D.okl  bnsRelaxationTri2D.okl  bnsSurfaceHex3D.okl  bnsSurfaceQuad2D.okl  bnsSurfaceQuad3D.okl  bnsSurfaceTet3D.okl  bnsSurfaceTri2D.okl  bnsVolumeHex3D.okl  bnsVolumeQuad2D.okl  bnsVolumeQuad3D.okl  bnsVolumeTet3D.okl  bnsVolumeTri2D.okl  bnsVorticityHex3D.okl  bnsVorticityQuad2D.okl  bnsVorticityQuad3D.okl  bnsVorticityTet3D.okl  bnsVorticityTri2D.okl
solvers/cns-bench/: CMakeLists.txt  bench.hpp  cns.hpp  cnsBench.cpp
solvers/cns-bench/okl/: cnsGradSurfaceHex3D_V2.okl  cnsGradSurfaceHex3D_V3.okl  cnsGradSurfaceHex3D_V4.okl  cnsGradSurfaceHex3D_V4a.okl  cnsGradSurfaceHex3D_V5.okl
solvers/cns-bench/src/: bench-array-of-pointers.cpp  bench-boilerplate.cpp  grad-packing-separate-streams.cpp  grad-packing-unpacking.cpp  gradSurVol-combined.cpp  gradSurface-Layout-copy.cpp  gradSurface-packed-sync.cpp  gradvol-permuted.cpp  volume-basic.cpp
solvers/cns/data/: cnsChannel2D.h
solvers/cns/setups/: setupChannel.rc
solvers/elliptic/okl/: ellipticAxHex3D.okl  ellipticAxIpdgHex3D.okl  ellipticAxIpdgQuad2D.okl  ellipticAxIpdgQuad3D.okl  ellipticAxIpdgTet3D.okl  ellipticAxIpdgTri2D.okl  ellipticAxIpdgTri3D.okl  ellipticAxQuad2D.okl  ellipticAxQuad3D.okl  ellipticAxTet3D.okl  ellipticAxTri2D.okl  ellipticAxTri3D.okl  ellipticCubatureAxHex3D.okl  ellipticGradientHex3D.okl  ellipticGradientQuad2D.okl  ellipticGradientQuad3D.okl  ellipticGradientTet3D.okl  ellipticGradientTri2D.okl  ellipticGradientTri3D.okl  ellipticPatchSolver.okl  ellipticPreconBlockJacobi.okl  ellipticPreconCoarsenHex3D.okl  ellipticPreconCoarsenQuad2D.okl  ellipticPreconCoarsenTet3D.okl  ellipticPreconCoarsenTri2D.okl  ellipticPreconProlongateHex3D.okl  ellipticPreconProlongateQuad2D.okl  ellipticPreconProlongateTet3D.okl  ellipticPreconProlongateTri2D.okl  ellipticRhsBCHex3D.okl  ellipticRhsBCIpdgHex3D.okl  ellipticRhsBCIpdgQuad2D.okl  ellipticRhsBCIpdgTet3D.okl  ellipticRhsBCIpdgTri2D.okl  ellipticRhsBCQuad2D.okl  ellipticRhsBCQuad3D.okl  ellipticRhsBCTet3D.okl  ellipticRhsBCTri2D.okl  ellipticRhsTet3D.okl  ellipticRhsTri2D.okl  (+2 more)
solvers/fokkerPlanck/okl/: fpeAdvectionHex3D.okl  fpeAdvectionQuad2D.okl  fpeAdvectionTet3D.okl  fpeAdvectionTri2D.okl  fpeCubatureAdvectionHex3D.okl  fpeCubatureAdvectionQuad2D.okl  fpeCubatureAdvectionTet3D.okl  fpeCubatureAdvectionTri2D.okl  fpeDiffusionHex3D.okl  fpeDiffusionQuad2D.okl  fpeDiffusionRhsHex3D.okl  fpeDiffusionRhsQuad2D.okl  fpeDiffusionRhsTet3D.okl  fpeDiffusionRhsTri2D.okl  fpeDiffusionTet3D.okl  fpeDiffusionTri2D.okl  fpeGradientHex3D.okl  fpeGradientQuad2D.okl  fpeGradientTet3D.okl  fpeGradientTri2D.okl
solvers/gradient/okl/: gradientVolumeHex3D.okl  gradientVolumeQuad2D.okl  gradientVolumeTet3D.okl  gradientVolumeTri2D.okl
solvers/ins/okl/: insAdvectionHex3D.okl  insAdvectionQuad2D.okl  insAdvectionQuad3D.okl  insAdvectionTet3D.okl  insAdvectionTri2D.okl  insCubatureAdvectionHex3D.okl  insCubatureAdvectionQuad2D.okl  insCubatureAdvectionTet3D.okl  insCubatureAdvectionTri2D.okl  insDiffusionHex3D.okl  insDiffusionQuad2D.okl  insDiffusionQuad3D.okl  insDiffusionTet3D.okl  insDiffusionTri2D.okl  insDivergenceHex3D.okl  insDivergenceQuad2D.okl  insDivergenceQuad3D.okl  insDivergenceTet3D.okl  insDivergenceTri2D.okl  insGradientHex3D.okl  insGradientQuad2D.okl  insGradientQuad3D.okl  insGradientTet3D.okl  insGradientTri2D.okl  insPressureIncrementRhsHex3D.okl  insPressureIncrementRhsQuad2D.okl  insPressureIncrementRhsTet3D.okl  insPressureIncrementRhsTri2D.okl  insPressureRhsHex3D.okl  insPressureRhsQuad2D.okl  insPressureRhsTet3D.okl  insPressureRhsTri2D.okl  insSubcycleAdvectionHex3D.okl  (+22 more)
solvers/rfs/: cns.hpp  cnsMain.cpp  speciesQuad2D.rc
(+25 files in other folders)
